<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/resultText"
        android:gravity="center"
        android:textSize="24dp"/>

    <TableRow
        android:id="@+id/tablerow0"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    </TableRow>

    <TableRow
        android:id="@+id/tablerow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btnClear"
            android:text="@string/btnClear"
            style="@style/scientificButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnPercentage"
            android:text="@string/btnPercentage"
            style="@style/scientificButtonStyle"
            android:onClick="btnClick" />
        <Button
            android:id="@+id/btnSqrt"
            android:text="@string/btnSqrt"
            style="@style/scientificButtonStyle"
            android:onClick="btnClick" />
        <Button
            android:id="@+id/btnLog"
            android:text="@string/btnLog"
            style="@style/scientificButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnBracketRight"
            android:text="@string/btnBracketRight"
            style="@style/scientificButtonStyle"
            android:onClick= "btnClick"/>

        <ImageButton
            android:id="@+id/btnRemoveOne"
            style="@style/scientificremoveButtonStyle"
            android:onClick="btnClick"/>
        <Button
            android:id="@+id/btnUseAnswer"
            android:text="@string/btnUseAnswer"
            style="@style/scientificButtonStyle"
            android:onClick="btnClick" />
    </TableRow>

    <TableRow
        android:id="@+id/tablerow2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btnSeven"
            android:text="@string/btnSeven"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>

        <Button
            android:id="@+id/btnEight"
            android:text="@string/btnEight"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>

        <Button
            android:id="@+id/btnNine"
            android:text="@string/btnNine"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnMultiply"
            android:text="@string/btnMultiply"
            style="@style/MyOwnButtonStyle"
            android:onClick="btnClick"/>
        <Button
            android:id="@+id/btnx2"
            android:text="@string/btnx2"
            style="@style/scientificButtonStyle"
            android:onClick="btnClick"/>
        <Button
            android:id="@+id/btn10X"
            android:text="@string/btn10X"
            style="@style/scientificButtonStyle"
            android:onClick="btnClick"/>
    </TableRow>

    <TableRow
        android:id="@+id/tablerow3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btnFour"
            android:text="@string/btnFour"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnFive"
            android:text="@string/btnFive"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnSix"
            android:text="@string/btnSix"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnDivide"
            android:text="@string/btnDivide"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnSin"
            android:text="@string/btnSin"
            style="@style/scientificButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnSquaredX"
            android:text="@string/btnSquared"
            style="@style/scientificButtonStyle"
            android:onClick= "btnClick"/>

    </TableRow>

    <TableRow
        android:id="@+id/tablerow4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btnOne"
            android:text="@string/btnOne"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnTwo"
            android:text="@string/btnTwo"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnThree"
            android:text="@string/btnThree"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnMinus"
            android:text="@string/btnMinus"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>^
        <Button
            android:id="@+id/btnCos"
            android:text="@string/btnCos"
            style="@style/scientificButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnPI"
            android:text="@string/btnPI"
            style="@style/scientificButtonStyle"
            android:onClick= "btnClick"/>

    </TableRow>

    <TableRow
        android:id="@+id/tablerow5"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btnZero"
            android:text="@string/btnZero"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnComma"
            android:text="@string/btnComma"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnEquals"
            android:text="@string/btnEquals"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnPlus"
            android:text="@string/btnPlus"
            style="@style/MyOwnButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnTan"
            android:text="@string/btnTan"
            style="@style/scientificButtonStyle"
            android:onClick= "btnClick"/>
        <Button
            android:id="@+id/btnFaculty"
            android:text="@string/btnFaculty"
            style="@style/scientificButtonStyle"
            android:onClick= "btnClick"/>

    </TableRow>
</TableLayout>
